# rust-template

./: Cargo.toml  Dockerfile  Readme.md
.github/workflows/: docker.yml  dockerhub_readme.yml  rust_security.yml
src/: main.rs
