[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum = "0.6"
# clap = { version = "4.4", features = ["derive", "env"] }
# once_cell = "1"
# reqwest = { version = "0.11", features = ["json"] }
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
# tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }
